# QTasksManager

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
cmake/: gitversion.cmake
extra/desktop/: qtasksmanager.desktop
src/: CPPLINT.cfg  ConfirmationPopup.qml  ConfirmationPopupForm.ui.qml  DateTimeValidator.cpp  DateTimeValidator.h  ScreenSaver.cpp  ScreenSaver.h  Settings.qml  SettingsForm.ui.qml  TextSwitchItem.qml  TextSwitchItemForm.ui.qml  TextTextEditItem.qml  TextTextEditItemForm.ui.qml  TrayIcon.cpp  TrayIcon.h  UserSettings.cpp  UserSettings.h  WorkPackage.cpp  WorkPackage.h  WorkPackages.qml  WorkPackagesForm.ui.qml  WorkPackagesManager.cpp  WorkPackagesManager.h  WorkPackagesModel.cpp  WorkPackagesModel.h  components.qrc  icons.qrc  main.cpp  main.qml  qml.qrc
src/dbus/: OrgCinnamonScreenSaver.cpp  OrgCinnamonScreenSaver.h
